# fluxby

./: .gitignore  .nexusrc  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CNAME  LICENSE  README.md  eslint.config.js  lint.txt  lint_default.txt  lint_full.txt  lint_report.json  lint_results.txt  package-lock.json  package.json  playwright.config.ts  test_output.txt  vitest.config.ts
.github/: dependabot.yml
.github/agents/: architect.agent.md  devops.agent.md  gamer.agent.md  nexus.agent.md  product-manager.agent.md  qa-engineer.agent.md  security.agent.md  seo-specialist.agent.md  software-developer.agent.md  tech-lead.agent.md  ux-designer.agent.md  visual-designer.agent.md
.github/prompts/: comprehensive-app-review.prompt.md  nexus-init.prompt.md  (+8 more)
apps/tauri/: Cargo.toml  package.json  tauri.conf.json
apps/tauri/capabilities/: default.json
apps/tauri/icons/: icon.icns
apps/tauri/src/: commands.rs  lib.rs  main.rs
docs/: ARM64-LINUX-BUILD.md  CODE-SIGNING.md  FLATPAK-SNAP-PACKAGING.md  MIGRATIONS.md  PEERJS-SERVER-SETUP.md  TURN-SERVER-SETUP.md
e2e/: accessibility.spec.ts  bulk-delete.spec.ts  category-view-enhancements.spec.ts  checkbox-manual-verification.spec.ts  fixtures.ts  recurring-transaction-expansion.spec.ts  sync-pairing.spec.ts  transaction-checkbox-fix.spec.ts
playwright-report/: index.html
scripts/: build-dist.mjs  build-pages.mjs  check-rust.mjs  generate-api.ts  generate-openapi.ts  process-screenshots.js  release.mjs  serve-pages.mjs  verify-encryption.ts
tests/: README-addressbook.md  README.md  setup.ts  test-helpers.ts
(+619 files in other folders)
